chore: add .env file

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -29,7 +29,7 @@ runs:
     - name: Set Environment Variables
       uses: falti/dotenv-action@d1cd55661714e830a6e26f608f81d36e23424fed # v1.1.2
       with:
-        path: ./.github/.env
+        path: ./.github/.environment
         export-variables: true
         keys-case: bypass
     - name: Install Node
