--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@eventstore/db-client": "^6.2.1",
-    "@kurrent/bridge": "^1.0.0-alpha.2",
+    "@kurrent/bridge": "^0.1.0",
     "tinybench": "^3.1.1"
   },
   "devDependencies": {
