--- a/packages/opentelemetry/package.json
+++ b/packages/opentelemetry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kurrent/opentelemetry",
-  "version": "1.0.0-alpha.1",
+  "version": "0.1.0",
   "description": "KurrentDB NodeJS Client SDK interceptors for tracing with OpenTelemetry",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
