--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kurrent/kurrentdb-client",
-  "version": "1.0.0-alpha.4",
+  "version": "0.1.0",
   "description": "KurrentDB gRPC NodeJS Client SDK",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
